2005-11-08  Frederic Crozat  <fcrozat@mandriva.com>

	* configure.ac:
	Use correct login XSession script for Mandriva.

2005-11-08  Frederic Crozat  <fcrozat@mandriva.com>

	* configure.ac:
	Add support for Mandriva distributions.

2005-11-08  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Suse support. Patch from James Willcox <snorp@snorp.net>

2005-11-07  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/sessionwindow.py:
	* lib/userprofile.py:
	Add method mergo_old_change to ProfileChange and call it
	
	* lib/sources/filessource.py:
	Use the merging to make delete changes remove a create change
	from this session.
	Fix delete change events
	
	* lib/config.py.in:
	Ignore files ~/.config and ~/.local.

2005-11-07  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

2005-11-07  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/lockdown/Makefile.am:
	* admin-tool/lockdown/disabledapplets.py:
	* admin-tool/lockdown/globalvar.py:
	* admin-tool/lockdown/icons.py:
	* admin-tool/lockdown/lockdownbutton.py:
	* admin-tool/lockdown/lockdowncheckbutton.py:
	* admin-tool/lockdown/maindialog.py:
	* admin-tool/lockdown/pessulus.glade:
	* admin-tool/lockdown/safeprotocols.py:
	Update to latest pessulus version (ChangeLog entry 2005-11-04)

2005-11-04  Alexander Larsson  <alexl@redhat.com>

	* sabayon.spec.in:
	Update for changes
	
	* lib/sources/mozillasource.py:
	Fix bug that caused multiple files in profile to be mishandled
	
	* lib/util.py:
	debug prints for "all" gets mask 0xFFFFFFFF

2005-11-03  Alexander Larsson  <alexl@redhat.com>

	* lib/protosession.py:
	Generate our own cookie instead of reusing the one from the
	parent display. (#318810)
	
	* lib/util.py:
	Add function to generate random strings

2005-11-03  Alexander Larsson  <alexl@redhat.com>

	* lib/sources/mozillasource.py:
	Don't strip comments from inside strings
	
	* lib/unittests.py:
	Add mozillasource tests

2005-11-03  Alexander Larsson  <alexl@redhat.com>
