@@ -28,6 +28,7 @@ Requires: python-abi = %{pyver}
 Requires: gamin-python
 Requires: libxml2-python
 Requires: pygtk2 >= %{pygtk2_version}
+Requires: python-ldap
 Requires: gnome-python2-gconf >= %{gnome_python2_version}
 
 BuildRequires: python-devel
