@@ -1,3 +1,11 @@
+2005-11-10  Alexander Larsson  <alexl@redhat.com>
+
+	* lib/userdb.py:
+	Initial ldap support
+	
+	* sabayon.spec.in:
+	Require python-ldap
+
 2005-11-08  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* configure.ac:
